--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <style>
     body {background-color: MediumSeaGreen;}
     h1   {color: white; text-align: center;}
+    form {color: white; text-align: center;}
   </style>
   </head>
   <body>
