--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>This is a sample html project in html</h1>
     <form action="/action_page.php">
-    <label for="fname"> name:</label><br>
+    <label for="fname">first name:</label><br>
     <input type="text" id="fname" name="fname" value="Sujena"><br>
     <label for="lname">Last name:</label><br>
     <input type="text" id="lname" name="lname" value="Sachithananthan"><br><br>
